# semantic_segmentation

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
data/: nyudepthv1.conf  semantic.conf
launch/: segment_metric_maps.launch  semantic_segmentation.launch  semantic_segmentation_integrate.launch  semantic_segmentation_plus.launch
resources/: config.json
scripts/: download_rf.sh
src/: dummy_client.cpp  semantic_segmentation.cpp  semantic_segmentation_integrate_node.cpp  semantic_segmentation_node.cpp  semantic_segmentation_plus_node.cpp
src/backend/: CMakeLists.txt  rectify.cpp  test.cpp  train.cpp  visualize_features.cpp  voxel.h  voxelize.cpp
src/backend/utils/: calibration.h  config.cpp  config.h  cv_util.cpp  cv_util.h  data_loader.cpp  data_loader.h  rgb_label_conversion.h
src/stable/: CMakeLists.txt
src/stable/evaluation/: CMakeLists.txt  semantic_labeling_evaluation.cc
src/stable/inference/: CMakeLists.txt  batch_dense_crf.cc  bipartitedensecrf.cc  block.hh  cluster3d.cc  cluster3d.hh  dense_util.cc  dense_util.hh  densecrf.cc  densecrf.hh  densecrf_evaluator.cc  densecrf_evaluator.hh  energy.hh  fastmath.hh  filter.cc  graph.hh  permutohedral.cc  permutohedral.hh
src/stable/randomized_decision_forest/: CMakeLists.txt  datasample.hh  forest.cc  forest.hh  randomized_decision_forest_test.cc  randomized_decision_forest_train.cc  split_function_generator.hh  tree.cc  tree.hh  tree_train.cc  tree_train.hh
src/stable/randomized_decision_forest/features/: color_feature_addition.cc  color_feature_addition.hh  color_feature_subtraction.cc  color_feature_subtraction.hh  color_feature_subtraction_abs.cc  color_feature_subtraction_abs.hh  color_gradient_patch_comparison_feature.cc  color_gradient_patch_comparison_feature.hh  color_gradient_patch_feature.cc  color_gradient_patch_feature.hh  color_gradient_pixel_feature.cc  color_gradient_pixel_feature.hh  color_patch_feature.cc  color_patch_feature.hh  depth_check_feature.cc  depth_check_feature.hh  depth_color_feature_addition.cc  depth_color_feature_addition.hh  depth_color_feature_subtraction.cc  depth_color_feature_subtraction.hh  depth_color_feature_subtraction_abs.cc  depth_color_feature_subtraction_abs.hh  depth_comparison_feature.cc  depth_comparison_feature.hh  depth_gradient_patch_feature.cc  depth_gradient_patch_feature.hh  geometrical_feature.cc  geometrical_feature.hh  height_feature.cc  height_feature.hh  image_coordinate_feature.cc  image_coordinate_feature.hh  normal_feature.cc  normal_feature.hh  ordinal_depth_feature.cc  ordinal_depth_feature.hh  relative_depth_feature.cc  relative_depth_feature.hh  single_pixel_color_feature.cc  single_pixel_color_feature.hh  (+2 more)
src/stable/tests/: CMakeLists.txt  leaf_patch_test.cc
src/stable/utils/: CMakeLists.txt  color_coding.cc  color_coding.hh  configuration.cc  configuration.hh  console_tree.cc  console_tree.hh  cv_util.cc  cv_util.hh  data_image.cc  data_image.hh  dataset.cc  dataset.hh  dynamic_dataset.cc  dynamic_dataset.hh  dynamic_static_array.hh  generate_pcd_from_dataset.cpp  random_generator.cc  random_generator.hh  random_source.cc  random_source.hh  static_dataset.cc  static_dataset.hh  string_util.cpp  string_util.h  time_stamp.cc  time_stamp.hh
src/stable/utils/color_coding/: general_color_coding.cpp  general_color_coding.h  nyudepthv1_color_coding.cpp  nyudepthv1_color_coding.h
src/stable/utils/datasets/: nyudepth_v1.cpp  nyudepth_v1.h  strands.cpp  strands.h
srv/: LabelIntegratedPointCloud.srv  LabelIntegratedPointInstanceCloud.srv
